# TFM_VIO

./: .gitignore  CMakeLists.txt
build_codex/: CMakeCache.txt
calib/phone/: phone.yaml
config/: config.yaml  rvio2.yaml  waypoints.txt  waypoints_example.txt
config/rs_435i/: direct_from_cam.md  rs_435i.yaml  rs_435i_old.yaml
docs/: .$Esquemas_TFM.drawio.bkp  Esquemas_TFM.drawio  da3_onnx.txt  formulae.md  perf_check.txt  performance_check.md  tareas.xlsx
include/: CSVlogger.hpp  config.hpp  controller.hpp  csv_logger.hpp  cv_commons.h  da3.h  feature.hpp  feature_detector.hpp  feature_tracker.hpp  global_planner.hpp  gt_est.hpp  gt_estimator.hpp  imu.hpp  imu_vio.hpp  lie_math.hpp  local_planner.hpp  plot_core.hpp  plotter.hpp  preprocess.h  propagator.hpp  ransac.hpp  source_man.hpp  source_man2.hpp  tracker.hpp  updater.hpp  vio_est.hpp  vio_plots.hpp  visual_odometry.hpp
include/seconds/: arg_parser.h  comms_common.h  file_parser.h  logger.h  profiler.hpp  ui_common.h
issues/: 280426-182207.txt  280426-182232.txt  280426-182336.txt  280426-182401.txt
matlab/: estimated_trajectory.csv  global_plannerm.m  point_cloud_vio.m  ppr3d.m  untitled.m
matlab/floor_occupancy_output/: occupancy_grid.csv  occupancy_grid.npy  occupancy_metadata.json
matlab/pointclouds/: estimated_trajectory.csv
memoria/: intro.tex  memoria.tex  output.xmpdata  referencias.bib
memoria/annexes/: A_anex.tex
memoria/chapters/: 01_introduction.tex  02_estado_del_arte.tex  03_arquitectura.tex  04_comunicacion.tex  04_estimador_prof.tex  05_controlador_local.tex  05_odometria_visual_inercial.tex  06_estimador_profundidad.tex  06_vislam_planificador.tex  07_dificultades.tex  07_planificadores.tex  08_ensayos_pruebas.tex  09_conclusión_lineas_fut.tex
scripts/: README.md  allan_variance.py  bag_to_csv.py  cam_calib.py  pc_to_map.py  plot_imu.py  plot_rpy.py  plot_synthetic_pose_compare.py  plot_tray.py  rs_to_map.py  synthetic_test.py
src/: controller.cpp  cv_commons.cpp  da3.cpp  feature.cpp  feature_detector.cpp  feature_tracker.cpp  global_planner.cpp  gt_est.cpp  gt_estimator.cpp  imu.cpp  lie_math.cpp  local_planner.cpp  main copy.cpp  main.cpp  main_own.cpp  plotter.cpp  preprocess.cu  propagator.cpp  ransac.cpp  rvio2.yaml  source_man.cpp  source_man2.cpp  tracker.cpp  updater.cpp  vio_est.cpp  visual_odometry.cpp
src/new_vers/: config.hpp  config.yaml  csv_logger.hpp  features.cpp  features.hpp  gt_est.cpp  lie_math.cpp  lie_math.hpp  main.old  main_old.cpp  main_old.oldold  plotter.cpp  plotter.hpp  pre_int.cpp  pre_int.hpp  source_man.cpp  source_man.hold  source_man2.cpp  source_man2.hpp  tracker.cpp  tracker.hpp  vio_update.cpp  vio_update.hpp
src/plotter/: plot_core.cpp  vio_plots.cpp
src/rvio2/: FeatureDetector.cc  InputBuffer.cc  Propagator.cc  Propagator.h  Ransac.cc  System.cc  System.h  Tracker.cc  Tracker.h  Updater.cc  Updater.h
src/rvio2/examples/: rvio2_library_example.cpp
src/rvio2/util/: config_compat.h  numerics.h  ros_compat.h
tools/: preintegrator.cc
tools/logger_bno085_sd/: logger_bno085_sd.ino
tools/prof/: DA3_onnx.cpp  perf_check.cpp  preprocess.cu  preprocess.h  sanity_check.cpp
tools/profiling_results/: prof-opencv-cpu-midas-small.json  prof-opencv-gpu-midas-small.json  prof-ort-cpu-midas-small.json  prof-ort-gpu-midas-f6b98070.json  prof-ort-gpu-midas-small.json
tools/send_raw/: send_raw.ino
tools/test/: RealSense_D435i.yaml  RealSense_D435i_color_inertial.yaml  RealSense_D435i_color_mono.yaml  calback_test.cpp  mahony.cpp  mahony.h  vislam_orb3_check.cpp  vislam_orb3_inertial.cpp  vslam_check.cpp
tools/test_bno085_allan/: test_bno085_allan.ino
tools/test_ekf_allan/: test_ekf_allan.ino
